--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -441,6 +441,7 @@ spec:
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
               serverName: ark
+              insecure_skip_verify: true
 
     # -Component scraping kubeDns. Use either this or coreDns
     kubeDns:
