--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
+  - ./alertmanagerconfig.yaml
   - ./scrapes/extrascrapes.yaml
   # - ./scrapes/vmpodscrape.yaml
   - ./scrapes/servicescrape.yaml
