--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -244,6 +244,12 @@ spec:
     # Add Kubelet scrape
     kubelet:
       enabled: true
+      # -- Enable scraping /metrics/cadvisor from kubelet's service
+      cadvisor: true
+      # -- Enable scraping /metrics/probes from kubelet's service
+      probes: true
+      # spec for VMNodeScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmnodescrapespec
       spec:
         scheme: "https"
         honorLabels: true
@@ -262,11 +268,38 @@ spec:
           - action: drop
             source_labels: ["__name__"]
             regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
+        relabelConfigs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - sourceLabels: [__metrics_path__]
+            targetLabel: metrics_path
+          - targetLabel: "job"
+            replacement: "kubelet"
+        # ignore timestamps of cadvisor's metrics by default
+        # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
+        honorTimestamps: false
 
     # Add Kubeapi scrape
     kubeApiServer:
       enabled: true
       spec:
+        endpoints:
+          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+            # bearerTokenSecret:
+            #   key: ""
+            port: https
+            scheme: https
+            tlsConfig:
+              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              serverName: kubernetes
+        jobLabel: component
+        namespaceSelector:
+          matchNames:
+            - kube-system
+        selector:
+          matchLabels:
+            component: apiserver
+            provider: kubernetes
         metricRelabelConfigs:
           # Drop high cardinality labels
           - sourceLabels: ["__name__"]
