--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -294,7 +294,7 @@ spec:
             scheme: https
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: ark
+              serverName: localhost
         jobLabel: component
         namespaceSelector:
           matchNames:
@@ -334,7 +334,7 @@ spec:
             scheme: https
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
+              serverName: localhost
 
   # -- Component scraping coreDns. Use either this or kubeDns
     coreDns:
