--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -335,6 +335,7 @@ spec:
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
               serverName: localhost
+              insecureSkipVerify: true
 
   # -- Component scraping coreDns. Use either this or kubeDns
     coreDns:
