--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -302,7 +302,7 @@ spec:
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
               serverName: localhost
-        jobLabel: kube-apiserver
+        jobLabel: apiserver
         namespaceSelector:
           matchNames:
             - kube-system
