--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -306,12 +306,12 @@ spec:
             provider: kubernetes
         metricRelabelConfigs:
           # Remove high cardinality metrics
-          - sourceLabels: ["__name__"]
-            regex: (etcd|rest_client)_request(|_sli|_slo)_duration_seconds_bucket
-            action: drop
-          - sourceLabels: ["__name__"]
-            regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
-            action: drop
+          # - sourceLabels: ["__name__"]
+          #   regex: (etcd|rest_client)_request(|_sli|_slo)_duration_seconds_bucket
+          #   action: drop
+          # - sourceLabels: ["__name__"]
+          #   regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
+          #   action: drop
 
     # Add kubeControllerManager scrape
     kubeControllerManager:
@@ -322,8 +322,8 @@ spec:
         - 192.168.108.238
       service:
         enabled: true
-        port: 6443
-        targetPort: 6443
+        port: 10257
+        targetPort: 10257
       spec:
         jobLabel: kube-controller-manager
         endpoints:
@@ -360,13 +360,20 @@ spec:
       endpoints: *cp
       service:
         enabled: true
-        port: 6443
-        targetPort: 6443
+        port: 10259
+        targetPort: 10259
 
       spec:
         endpoints:
-          - port: http-metrics
-            insecureSkipVerify: true
+          endpoints:
+            - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+              # bearerTokenSecret:
+              #   key: ""
+              port: http-metrics
+              scheme: https
+              tlsConfig:
+                caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+                insecureSkipVerify: true
 
     kubeProxy:
       enabled: false # Disabled because eBPF
