--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -364,6 +364,7 @@ spec:
     kubeApiServer:
       enabled: true
       spec:
+        spec:
         endpoints:
           - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
             # bearerTokenSecret:
@@ -372,8 +373,8 @@ spec:
             scheme: https
             tlsConfig:
               caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: ark
-        jobLabel: apiserver
+              serverName: kubernetes
+        jobLabel: component
         namespaceSelector:
           matchNames:
             - kube-system
@@ -400,8 +401,8 @@ spec:
         - 192.168.108.238
       service:
         enabled: true
-        port: 10257
-        targetPort: 10257
+        port: 10259
+        targetPort: 10259
       spec:
         jobLabel: kube-controller-manager
         endpoints:
@@ -438,8 +439,8 @@ spec:
       endpoints: *cp
       service:
         enabled: true
-        port: 10259
-        targetPort: 10259
+        port: 10257
+        targetPort: 10257
 
       spec:
         endpoints:
