--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -435,7 +435,7 @@ spec:
 
     # Add kubeScheduler scrape
     kubeScheduler:
-      enabled: false
+      enabled: true
       endpoints: *cp
       service:
         enabled: true
