--- a/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
@@ -70,14 +70,14 @@ stringData:
           regex: (.+)
           target_label: __metrics_path__
           replacement: /api/v1/nodes/$1/proxy/metrics
-    - job_name: "kubernetes-controller-manager"
+    - job_name: "kubernetes-controller-manager-rewrite"
       scheme: https
       tls_config:
         ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         insecure_skip_verify: true
       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       kubernetes_sd_configs:
-        - role: node
+        - role: endpoints
       relabel_configs:
         - if: '{job=~"victoria-metrics-kube-controller-manager"}'
           source_labels: [job]
