--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -44,8 +44,8 @@ spec:
       enabled: true
       spec:
         # Duration to keep metrics
-        retentionPeriod: "2" # this is months unless a character prefix is added (1d, 1w, etc)
-        replicationFactor: 3
+        retentionPeriod: "5d" # this is months unless a character prefix is added (1d, 1w, etc)
+        replicationFactor: 2
         # Storage backend
         vmstorage:
           replicaCount: 3 # HA - but prefer 3 as i have 3 notes & using local-hostpath
@@ -75,7 +75,7 @@ spec:
                     storage: 10Gi
         # Query backend
         vmselect:
-          replicaCount: 3 # HA
+          replicaCount: 2 # HA
           cacheMountPath: /select-cache
           extraArgs:
             dedup.minScrapeInterval: 10s
@@ -115,7 +115,7 @@ spec:
                     storage: 2Gi
         # Data ingestion backend
         vminsert:
-          replicaCount: 3 # HA
+          replicaCount: 2 # HA
           extraArgs:
             maxLabelsPerTimeseries: "90" # More needed if you are scraping a LOT of stuff and having issues
             # insert.maxConcurrentRequests: 10
@@ -163,7 +163,7 @@ spec:
     vmalert:
       enabled: true
       spec:
-        replicaCount: 3 # HA
+        replicaCount: 2 # HA
         evaluationInterval: "60s"
         resources:
           requests:
